src/objects/Zone_Value_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>RespCode__c</fullName>
        <label>RespCode</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resp__c</fullName>
        <label>Resp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneCode__c</fullName>
        <label>ZoneCode</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Zone Value Mapping</label>
</CustomObject>